# flask-docker

./: Dockerfile  Makefile  commitlint.config.js  docker-compose.data.yml  docker-compose.development.yml  package-lock.json  package.json  pyproject.toml  sample.env
.github/: auto_assign.yml
flask_docker/common/: configurations.py  constants.py  exceptions.py  helper.py
flask_docker/server/: app.py  error_handler.py  helper.py  module.py  wsgi.py
flask_docker/server/routes/: modules.py
flask_docker/services/database/: models.py  relational_db.py
scripts/: build.sh  create-network.sh  destroy-network.sh  down.sh  restart.sh  start.sh  up.sh
tests/integration/: conftest.py
tests/integration/routes/: test_modules.py
